[tool.poetry]
name = "pubmed_paper_fetcher"
version = "0.1.0"
description = "Fetches research papers from PubMed and filters by non-academic authors"
authors = ["Tushar Sanisare"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.5.0"

[tool.poetry.scripts]
get-papers-list = "cli:main"
